--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,9 +12,8 @@
         "-DDEBUG",
         "-g3",
         "-Wall",
-        "-o star_vortex.exe",
-        "main.cpp src/Engine/Engine.cpp",
-        "-o star_vortex.exe",
+        "-o debug/star_vortex.exe",
+        "main.cpp src/Core/Engine/*.cpp",
         "-lopengl32 -lglfw3 -lgdi32",
         "-L lib"
       ],
