--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
         "-g3",
         "-Wall",
         "-o debug/star_vortex.exe",
-        "main.cpp src/Core/Engine/*.cpp",
+        "main.cpp src/Core/*.cpp",
         "-lopengl32 -lglfw3 -lgdi32",
         "-L lib"
       ],
