Added simple shader class. Not working now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,12 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "chrono": "cpp"
-    }
+        "chrono": "cpp",
+        "fstream": "cpp",
+        "ctime": "cpp",
+        "ratio": "cpp",
+        "sstream": "cpp",
+        "string": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
