--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,7 +37,26 @@
         "ctime": "cpp",
         "ratio": "cpp",
         "sstream": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "map": "cpp",
+        "algorithm": "cpp",
+        "cstdarg": "cpp",
+        "functional": "cpp",
+        "iomanip": "cpp",
+        "list": "cpp",
+        "locale": "cpp",
+        "memory": "cpp",
+        "tuple": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "xfunctional": "cpp",
+        "xhash": "cpp",
+        "xlocbuf": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xtree": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
