--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,18 +4,24 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Run debug build",
+      "label": "Debug-build",
       "type": "shell",
       "command": "g++",
       "args": [
-        "-I include",
-        "-L lib",
+        "-Iinclude",
+        "-Llib",
         "-DDEBUG",
         "-g",
         "-Wall",
-        "-o debug/star_vortex.exe",
-        "main.cpp src/glad.c src/Core/*.cpp",
-        "-lopengl32 -lglfw3 -lgdi32"
+        "-odebug/star_vortex",
+        "main.cpp",
+        "src/glad.c",
+        "src/Core/*.cpp",
+        "-lSOIL",
+        "-lglfw3",
+        "-lgdi32",
+        "-lopengl32",
+        "-Wfatal-errors"
       ],
       "group": {
         "kind": "build",
