Added renderer. Partially

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,7 @@
         "-Wall",
         "-o bin/debug/star_vortex",
         "src/*.cpp",
+        "src/*.c",
         "src/Core/*.cpp",
         "-lSOIL",
         "-lglfw3",
